# portfolio-rebalance-pipeline

./: .env.example  .envrc.example  .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  config.yaml  environment.yml  pyproject.toml  pytest.ini  requirements.txt  test_connection.py  test_longport.py
.github/workflows/: rewrite-history.yml  update-toc.yml
buffett_text/: 1951-12-06-the-security-I-like-best.md  1953-03-01-the-security-I-like-best-2.txt  1969-05-29-partnership-dissolve-letter.txt  1977-05-01-how-inflation-swindles-the-equity-investor.txt  1979-08-06-you-pay-a-very-high-price-in-the-stock-market-for-a-cheery-consensus.txt  1984-03-14-goodwill-and-its-amortization.txt  1984-05-17-the-superinvestors-of-graham-and-doddsville.txt  1997-01-13-a-plain-english-handbook-preface.txt  1998-10-15-university-of-florida.txt  1999-01-01-berkshire-hathaway-inc-an-owners-manual.txt  1999-07-01-allen-sun-valley-conference.txt  1999-11-22-mr-buffett-on-the-stock-market.txt  2001-12-10-warren-buffett-on-the-stock-market.txt  2002-12-31-derivatives.txt  2003-11-10-americas-growing-trade-deficit.md  2003-11-10-americas-growing-trade-deficit.txt  2004-07-06-fuzzy-math-and-stock-options.md  2004-07-06-fuzzy-math-and-stock-options.txt  2008-02-29-the-great-the-good-and-the-gruesome.txt  2008-10-16-buy-american-i-am.txt  2011-08-14-stop-coddling-the-super-rich.txt  2012-04-01-warren-buffetts-50-billion-decision.txt  2014-02-27-berkshire-past-present-and-future.txt  2014-02-27-vice-chairmans-thoughts-past-and-future.txt  clean_docs.py  letters_to_shareholders_2018.md  letters_to_shareholders_2019.md  letters_to_shareholders_2020.md  letters_to_shareholders_2021.md  letters_to_shareholders_2022.md  letters_to_shareholders_2023.md  letters_to_shareholders_2024.md  letters_to_shareholders_from_1965_to_2017.txt
config/: template.yaml
docs/: TESTING.md  cross_sectional_strategy_solutions.md  data_source.md  database_backtest_guide.md  fundamental_analysis_via_machine_learning.docx  fundamental_analysis_via_machine_learning.md  how_to_standardize_data.md  programming_language_choice.md  quant_strategy_questions.md  stock_selection.md  tests_guide.md
docs_extra/: SQLITE_CLI_IMPORT.md  cross_sectional_strategy_solutions.md  data_source.md  filtered_stocks.md  gemini_api_quick_start.md  gemini_example_1.md  how_to_standardize_data.md  quant_strategy_questions.md  stock_selection.md  structured_ouput_gemini_documentation.md
examples/: account_stock_info_fetch.py  database_backtest_example.py
notebook/: exploratory_data_analysis.ipynb  notebook.ipynb  simplifed_backtesting.ipynb
project_tools/: combine_code.py  rf_tools.py
script/: main.py  simplifed_backtesting.py
scripts/: rebuild_db.sh
sql/: dedup_share_prices.sql  indexes_prices.sql  rebuild_share_prices.sql  schema.sql  schema_prices.sql
src/longbridge/: __init__.py  openapi.py
src/longport/: __init__.py  openapi.py
src/stock_analysis/: ai_stock_pick.py  backtest_benchmark_spy.py  backtest_quarterly_ai_pick.py  backtest_quarterly_unpicked.py  cli.py  enrich_selection_results.py  fees.py  gemini.py  gemini_2.py  load_data_to_db.py  models.py  preliminary_selection.py  run_ai_stock_pick.py  run_backtest.py  run_daily_selection.py  run_quarterly_backtest.py  run_quarterly_selection.py  run_selection.py  schema.sql  (+2 more)
tests/: README.md  performance_comparison.py  test_ai_integration_stub.py  test_cli_smoke.py  test_config.py  test_data_completeness.py  test_db_io.py  test_engine_core.py  test_paths_logging.py  test_portfolio_constituents.py  test_price_data_completeness.py  test_spy_returns.py
tools/: account_cash_info_fetch.py  account_fund_info_fetch.py  calculate_spy_return.py  check_source_data.py  check_spy_dividends.py  combine_code.py  create_data_previews.py  create_top_100_previews.py  gemini_example_2.py  get_data_header_name.py  get_header_name.py  header_name.txt  load_data_to_db.py  run_daily_backtest.py  run_daily_selection.py  spy_returns.py  test_spy_returns.py  validate_ai_pick_jsons.py  version_checking.py
(+80 files in other folders)
