[project]
name = "stock-analysis"
version = "0.1.0"
requires-python = ">=3.10, <3.11"

dependencies = [
    "pandas",
    "matplotlib",
    "openpyxl",
    "scipy",
    "backtrader",
    "python-dotenv",
    "google-genai",
    "longport>=0.2.77",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["stock_analysis*"]

[project.scripts]
stockq = "stock_analysis.cli:app"

[tool.uv]
package = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
# 选择要启用的规则集。
# "E", "F" 对应 Flake8 的原生规则。
# "I" 对应 isort。
# "UP" 对应 pyupgrade。
select = ["E", "F", "I", "UP", "B"] # B 是 flake8-bugbear

# 或者，启用所有规则，然后忽略掉你不需要的
# select = ["ALL"]
# ignore = ["D100", "D101"] # 忽略特定规则

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "--cov=stock_analysis --cov-report=term-missing --cov-fail-under=75 -m 'not integration'"
testpaths = [
    "tests",
]
markers = [
    "unit: fast unit tests",
    "integration: slow or IO-heavy tests (skipped by default)",
    "e2e: full pipeline/CLI tests",
    "slow: tests that take a long time to run",
    "requires_api: tests that require external API access",
    "requires_db: tests that require database access"
]
