[project]
name = "stock-analysis"
version = "0.1.0"
requires-python = ">=3.10, <3.11"

dependencies = [
    "pandas",
    "matplotlib",
    "openpyxl",
    "scipy",
    "backtrader",
    "python-dotenv",
    "google-genai",
    "longport>=0.2.77",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit",
]

[project.optional-dependencies]
cli = ["rich"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["stock_analysis*"]

[project.scripts]
stockq = "stock_analysis.cli:app"

[tool.uv]
package = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
# Select rule sets to enable.
# "E", "F" correspond to Flake8's native rules.
# "I" corresponds to isort.
# "UP" corresponds to pyupgrade.
select = ["E", "F", "I", "UP", "B"] # B is flake8-bugbear

# Or, enable all rules and then ignore the ones you don't need
# select = ["ALL"]
# ignore = ["D100", "D101"] # Ignore specific rules

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.coverage.report]
include = ["src/stock_analysis/cli.py"]
